Kubernetes/05-ingress-handson/ingress-handson.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-handson
spec:
  rules:
  - host: ingress-nginx.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-handson
            port:
              number: 8080
      - path: /demo
        pathType: Prefix
        backend:
          service:
            name: sample-python-app-service
            port:
              number: 8888
